--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,6 +11,29 @@
   pointer-events: none;
 }
 
+#info {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+#profile-img {
+  width: 300px;
+  height: 300px;
+  margin: auto 0;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+}
+
+#tweet-view {
+  overflow-y: scroll;
+  height: 400px;
+  width: 500px;
+  margin: 0 auto;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
