--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,6 +11,11 @@
   pointer-events: none;
 }
 
+#loggedin-label {
+  margin: 0;
+  font-size: 0.8em;
+}
+
 #info {
   display: flex;
   flex-direction: row;
